[package]
name = "album"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
ip_extractor = "0.1.1"
clipboard = "0.5.0"
http="1"